--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Finances App</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="./src/assets/icon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <title>Home | Finances App</title>
+</head>
+
+<body>
+  <noscript>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Roboto", sans-serif;
+        color: #e1e1e6;
+      }
+
+      html,
+      body {
+        background-color: #121212;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      .logomark {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .logomark h1 {
+        user-select: none;
+      }
+
+      .logomark svg {
+        fill: #e1e1e6;
+        width: 50px;
+        height: 50px;
+      }
+
+      .content {
+        width: 100%;
+        max-width: 400px;
+        padding: 20px;
+        margin: 20px;
+        border-radius: 5px;
+        background-color: #202020;
+      }
+
+      .content h1 {
+        text-align: center;
+        user-select: none;
+        font-size: 25px;
+        margin-bottom: 20px;
+      }
+
+      .content p {
+        margin-bottom: 10px;
+        color: #808080;
+      }
+
+      .content p a {
+        font-weight: bold;
+        color: #808080;
+        text-decoration: none;
+      }
+
+      .content p a:hover {
+        text-decoration: underline;
+      }
+
+      footer {
+        user-select: none;
+        text-align: center;
+        font-size: 12px;
+        color: #808080;
+        margin-top: 20px;
+      }
+    </style>
+    <div class="logomark">
+      <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24"
+        width="24">
+        <g>
+          <rect fill="none" height="24" width="24" />
+        </g>
+        <g>
+          <path
+            d="M19,3H5C3.9,3,3,3.9,3,5v14c0,1.1,0.9,2,2,2h14c1.1,0,2-0.9,2-2V5C21,3.9,20.1,3,19,3z M13.03,7.06L14.09,6l1.41,1.41 L16.91,6l1.06,1.06l-1.41,1.41l1.41,1.41l-1.06,1.06L15.5,9.54l-1.41,1.41l-1.06-1.06l1.41-1.41L13.03,7.06z M6.25,7.72h5v1.5h-5 V7.72z M11.5,16h-2v2H8v-2H6v-1.5h2v-2h1.5v2h2V16z M18,17.25h-5v-1.5h5V17.25z M18,14.75h-5v-1.5h5V14.75z" />
+        </g>
+      </svg>
+      <h1>Finances</h1>
+    </div>
+    <div class="content">
+      <h1>JavaScript está Desativado!</h1>
+      <p>Infelizmente nós não podemos carregar a página, pois o JavaScript está desativado no seu navegador!</p>
+      <p>Caso você não saiba ativar o JavaScript no seu navegador, <a
+          href="https://www.enable-javascript.com/pt/">Clique Aqui</a> para acessar um guia de ajuda.</p>
+    </div>
+    <footer>&copy; Copyright 2022 | FinancesApp.</footer>
+  </noscript>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
